# comet-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: examples-nata.yaml  pr-title-validation.yml  test-examples.yml
SageMaker/: Linear_example.ipynb  README.md  random_forest.ipynb
catalyst/: README.md  comet_catalyst_example.py
chainer/: train-example.py
distributed-optimizer/: initialize_optimizer.py  job-initialize-comet-optimizer.yaml  job-optimizer-uuid.yaml  readme.md  run.sh  run_optimizer.py
fastai/: README.md  train-example.py
guides/Artifacts/: Artifacts-workflow-example.ipynb
guides/Python-API/: APIExperiment-workflow-example.ipynb
guides/advanced/: Running_Offline_Experiments.ipynb
guides/computer_vision/: Computer_Vision_with_Comet.ipynb
guides/get-started/: Comet_Quickstart.ipynb  Comet_Quickstart.py  Image_Classification_with_Keras.ipynb  Using_Comet_with_Structured_Data_Churn_Prediction.ipynb
guides/manage_data/: A_Guide_to_Remote_Artifacts.ipynb  Introduction_to_Artifacts.ipynb
guides/tracking-ml-training/: Comet_in_Notebooks.ipynb
integrations/SageMaker/: Linear_example.ipynb  random_forest.ipynb
integrations/annoy/: README.md  annoy_example.py  requirements.txt  test.ann
integrations/caffe/: caffe2-charRNN-example.py  comet-caffe2-charRNN-example.py
integrations/catalyst/: comet_catalyst_example.py  requirement.txt
integrations/chainer/: readme.md  requirements.txt
integrations/distributed-optimizer/: Dockerfile  initialize_optimizer.py  job-optimizer.yaml  run_optimizer.py
integrations/fastai/: train-example.py
integrations/keras/: comet-keras-lstm-example.py  comet-keras-seq2seq-example.py  readme.md  requirements.txt
integrations/langgraph/: README.md  pyproject.toml
integrations/langgraph/src/: call_summarizer.py
integrations/mlflow/: README.md  mlflow-with-comet.py  requirements.txt
integrations/mxnet/: mxnet_cifar10.py  readme.md  requirements.txt
integrations/notebooks/: Comet-Confusion-Matrix.ipynb  Comet-R-nnet.ipynb  Comet-REST-API.ipynb  Comet_and_Hugging_Face.ipynb  keras.ipynb
integrations/pytorch/: comet-pytorch-horovod-mnist.py
integrations/scikit/: readme.md  requirements.txt
integrations/tensorflow-1/: comet-tensorflow-char-rnn-example.py  comet-tensorflow-custom-estimator.py  comet-tf1-distributed-mirrored-strategy.py  comet-tf1-distributed-parameter-server-strategy.py
keras/: comet-keras-bAbI-example.py  comet-keras-bidir-lstm-example.py  comet-keras-cnn-lstm-example.py  comet-keras-deep-dream-example.py  comet-keras-lstm-example.py  comet-keras-mnist-example.py  comet-keras-optimizer.py  mnist-dnn-rich.py  mnist-dnn.py  utils.py
keras/data/: _about.txt
mlflow/: README.md  mlflow-with-comet.py
mxnet/: mxnet_cifar10.py
notebooks/: Comet-Confusion-Matrix-Pytorch.ipynb  Comet-Confusion-Matrix.ipynb  Comet-Python-API.ipynb  Comet-R-nnet.ipynb  Comet-REST-API.ipynb  Comet.ml REST API.ipynb  Comet_Custom_Panels_for_Object_Detection.ipynb  Comet_Logging_Curves.ipynb  Comet_StyleGAN3_Sampling.ipynb  Comet_Tensorflow_Model_Analysis.ipynb  Comet_Visualizations_to_Debug_CNNs.ipynb  Comet_and_Pytorch.ipynb  Comet_and_Vega.ipynb  DataGrid.ipynb  ExpiringDataExample.ipynb  fastai.ipynb  keras.ipynb
opik/: README.md
opik/image_classification_eval/: README.md  example.env  multimodal_classification_demo.py  pyproject.toml  text_classification_gepa_demo.py  utils.py
opik/streamlit/call-summarizer/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  init_app.py  pyproject.toml  run_tests.py
opik/streamlit/call-summarizer/src/call_summarizer/: config.py
opik/streamlit/call-summarizer/src/call_summarizer/models/: models.py
opik/streamlit/call-summarizer/src/call_summarizer/services/: category_manager.py  summarization_workflow.py  vector_store.py
opik/streamlit/call-summarizer/src/call_summarizer/utils/: file_utils.py
opik/streamlit/call-summarizer/tests/: README.md  conftest.py  test_complete_application.py
panels/: AudioComparePanel.py  DataGridViewer.py  Leardle.py  OptimizerAnalysis.py  README.md  SmokeTest.py  TensorboardGroupViewer.py  TensorboardProfileViewer.py  TotalFidelityMetricPlot.py  make.py
pytorch/: README.md  comet-pytorch-ddp-cifar10.py  comet-pytorch-ddp-mnist-example.py  comet-pytorch-ddp-mnist-single-experiment.py  comet-pytorch-distributed-model-mnist.py  comet-pytorch-distributed-model-parallel-mnist-example.py  comet-pytorch-horovod-mnist.py  comet-pytorch-mnist-example.py  online-pytorch-lightning-apex-example.py  pytorch-rich-logging-example.py
pytorch_lightning/: README.md  pytorch_lightning_optimizer.py  requirements.txt
resources/: readme.md
rest_api/asset_cleanup/: .pre-commit-config.yaml  README.md  comet_asset_cleanup.py  pyproject.toml
scikit/: README.md  comet-scikit-classification-example.py  comet-scikit-nlp-example.py
tensorflow/: README.md  comet-tensorflow-char-rnn-example.py  comet-tensorflow-distributed-example.py  comet-tensorflow-distributed-multiworker-mirrored-strategy.py  comet-tensorflow-distributed-parameter-server-strategy.py  comet-tensorflow-mnist-example.py  comet-tensorflow-word2vec-example.py  comet-tf1-distributed-estimator-multiworker-mirrored-strategy.py  comet-tf1-distributed-mirrored-strategy.py  comet-tf1-distributed-parameter-server-strategy.py  hooks.py  iris_data.py
tensorflow-1/: README.md  comet-tensorflow-custom-estimator-hook.py  comet-tensorflow-mnist-example.py  comet-tensorflow-word2vec-example.py  comet-tf1-distributed-estimator-multiworker-mirrored-strategy.py  comet-tf1-distributed-mirrored-strategy.py  comet-tf1-distributed-parameter-server-strategy.py  hooks.py
tensorflow-2/: README.md  comet-tensorflow-distributed-multiworker-mirrored-strategy.py  comet-tensorflow-distributed-parameter-server-strategy.py
transformers/: README.md  transformes_example.py
vertex/: .gitignore  Readme.MD  demo_pipeline.py
xgboost/: online-xgboost-python-example.py  online-xgboost-python-train.py  requirements-py37.txt
(+256 files in other folders)
