[project]
name = "image-classification-eval"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco",email = "22344801+fschlz@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opik (>=1.8.90,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "google-genai (>=0.1.0,<1.0.0)",
    "litellm (>=1.0.0,<2.0.0)",
    "pillow (>=10.0.0,<11.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "opik-optimizer (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.ruff]
# Same as Black.
line-length = 140

# Assume Python 3.12.
target-version = "py312"

# Specify the source directory for import sorting and other path-dependent checks.
src = ["src"]

[tool.ruff.lint]
# Enable Pyflakes (F) and pycodestyle (E, W) and McCabe (C90) complexity.
select = ["F", "E", "W", "C90"]
ignore = ["E402", "C901", "E722"]

# Allow unused variables when underscore-prefixed.
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
